# sealed_trait

./: Cargo.toml  README.md
src/: lib.rs  macros.rs
