[package]
name = "sealed_trait"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A utility for making sealed traits more accessible"
repository = "https://github.com/SunkenPotato/sealed_trait"
readme = "README.md"
exclude = [".gitignore", "Cargo.lock"]

[dependencies]
paste = "1.0.15"
